@@ -26,7 +26,7 @@ geom_bin2d <- function(mapping = NULL, data = NULL, stat = "bin2d",
     data = data,
     mapping = mapping,
     stat = stat,
-    geom = GeomRect,
+    geom = GeomRaster,
     position = position,
     show.legend = show.legend,
     inherit.aes = inherit.aes,
