@@ -1,10 +1,10 @@
 #' @export
 #' @rdname stat_summary_2d
-#' @inheritParams stat_binhex
+#' @inheritParams stat_bin_hex
 stat_summary_hex <- function(mapping = NULL, data = NULL, geom = "hex",
-                             position = "identity", bins = 30, drop = TRUE,
-                             fun = "mean", fun.args = list(), show.legend = NA,
-                             inherit.aes = TRUE, ...) {
+                             position = "identity", bins = 30, binwidth = NULL,
+                             drop = TRUE, fun = "mean", fun.args = list(),
+                             show.legend = NA, inherit.aes = TRUE, ...) {
   layer(
     data = data,
     mapping = mapping,
@@ -15,6 +15,7 @@ stat_summary_hex <- function(mapping = NULL, data = NULL, geom = "hex",
     inherit.aes = inherit.aes,
     stat_params = list(
       bins = bins,
+      binwidth = binwidth,
       drop = drop,
       fun = fun,
       fun.args = fun.args
